0.2.0 -> 0.2.1

- Added "Add breakpoint" context option
- Added Find & Replace menu in code editor
- Added autocompletion system
- Added unintentation (Shift+Tab)
- Added version auto-checking
- Improved splash screen
- Improved code highlighting (real time parsing)
- Improved notifications layout
- Added BLXNS instruction
- Added BXNS instruction
- Added PUSH instruction
- Fixed BLX instruction not being able to use labels
- Fixed STM/LDM instruction not detecting the lack of update mode


0.1.10 -> 0.2.0

- Added Rating and Hardware requirements (AppStream)
- Added CBZ instruction
- Added CBNZ instruction
- Added CLZ instruction
- Improved instructions system (complete overhaul)
- Improved icons and showcase medias
- Improved i18n (French)
- Improved logging formatting
- Fixed layout on desktop
- Fixed Regex Parser invalid statement detection


0.1.9 -> 0.1.10

- Added ADR instruction
- Added BFC instruction
- Added BFI instruction
- Added BKPT instruction
- Added BLX instruction
- Added shortcuts and shortcut hints
- Added code and manual breakpoint settings
- Added i18n (English and French)
- Added notification tray length settings
- Improved Linux execution script (discovering and selecting JRE version)
- Improved Syntax error message (specify file in most of the cases)
- Fixed Legacy Parser skipping incorrect instructions when it should send a notification
- Fixed Step Over task GUI (buttons stayed enabled)


0.1.8 -> 0.1.9

- Added more screenshots in the MetaInfos
- Added line marking when double-clicking in labels
- Fixed Flatpak version poor performances (allowing OpenGL)
- Fixed line marking disappearing when the PC does not move
- Fixed Step Over task (skipped an instruction)
- Adjusted the default simulation interval to prevent front-end bugs


0.1.7 -> 0.1.8

- Added layout preferences saving
- Added editor tabs reordering
- Modified change highlighting (no more fading)
- Modified Step Over task (based on nesting count)
- Fixed label verifying process